--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-bootstrap": "^1.4.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.1.1",
+    "typescript": "^4.4.3",
     "typestyle": "^2.1.0",
     "web-vitals": "^1.1.0"
   },
