--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
+    "mathjax-full": "^3.2.0",
+    "mathjax-react": "^1.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.2",
     "react-device-detect": "^1.17.0",
