--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "lodash": "^4.17.21",
     "mathjax-full": "^3.2.0",
     "mathjax-react": "^1.0.6",
