--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^5.1.3",
-    "chart.js": "^3.6.2",
+    "chart.js": "^3.7.0",
     "lodash": "^4.17.21",
     "mathjax-full": "^3.2.0",
     "mathjax-react": "^1.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.5",
