move Docker and docer-compose files into a docker/ named folder, modify docker context in docker-compose file, thus the path of files to be ignored in .gitignore file

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,9 @@
-# Dockerfile
-Dockerfile
+## the docker client (Command Line Interface) starts searching for a file
+# called .dockerignore in the Build Context’s root directory
+##
+
+# Docker and docker compose files
+/docker
 
 # node modules
 **/node_modules
