--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "lodash": "^4.17.21",
@@ -24,7 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.1.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.9.5",
     "typestyle": "^2.1.0",
     "web-vitals": "^1.1.0"
   },
