--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "react-chartjs-2": "^4.0.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "redux": "^4.1.1",
     "typescript": "^4.9.5",
     "typestyle": "^2.1.0",
     "web-vitals": "^1.1.0"
@@ -55,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
